[gd_scene load_steps=4 format=3 uid="uid://jh3bid74vkud"]

[ext_resource type="Script" uid="uid://bepnm4hwgdfh7" path="res://Scripts/item.gd" id="1_76mu4"]
[ext_resource type="Texture2D" uid="uid://b5mlxvl110rxn" path="res://Sprites/hat.png" id="1_ys0gr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_76mu4"]
radius = 172.192

[node name="Item" type="Node2D"]
script = ExtResource("1_76mu4")
sprite = ExtResource("1_ys0gr")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ys0gr")

[node name="area_collect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_collect"]
shape = SubResource("CircleShape2D_76mu4")

[connection signal="body_entered" from="area_collect" to="." method="_on_area_collect_body_entered"]
[connection signal="body_exited" from="area_collect" to="." method="_on_area_collect_body_exited"]
